# CREWAI-projects

./: README.md
CREWAI-tutorial/: agents.py  app.py  main.py  tasks.py
a_marketing_team/: README.md  pyproject.toml
a_marketing_team/src/a_martketing_team/: crew.py  main.py
a_marketing_team/src/a_martketing_team/config/: agents.yaml  tasks.yaml
